# devin-outpost-k8s

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
charts/devin-outposts-k8s/: Chart.yaml  values.yaml
charts/devin-outposts-k8s/crds/: outpostpool.yaml
charts/devin-outposts-k8s/files/: crd-outpostpool.json
charts/devin-outposts-k8s/templates/: NOTES.txt  _helpers.tpl  default-pool.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/outposts-operator/: .helmignore  Chart.yaml  values.yaml
charts/outposts-operator/files/: crd-outpostpool.json
charts/outposts-operator/templates/: NOTES.txt  _helpers.tpl  crd.yaml  default-pool.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: API_CONTRACT.md  ARCHITECTURE.md  DEVELOPMENT.md  OBSERVABILITY.md  SNAPSHOTS.md
examples/: outpostpool.yaml
src/: config.rs  elector.rs  error.rs  lib.rs  main.rs  metrics.rs  telemetry.rs
src/api/: client.rs  mod.rs  types.rs
src/controller/: context.rs  mod.rs  plan.rs  pod.rs  queue_watch.rs  reconcile.rs
src/crd/: mod.rs  outpost_pool.rs
src/opbeta/: client.rs  mod.rs  types.rs
src/snapshot/: filesystem.rs  gke.rs  mod.rs  noop.rs
tests/: wire.rs
tests/mock_server/: mod.rs
