[package]
name = "devin-outposts-k8s"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
description = "A Kubernetes operator that runs Devin Outposts."
repository = "https://github.com/CognitionAI/outposts-kubernetes"
readme = "README.md"
default-run = "devin-outposts-k8s"

[[bin]]
name = "devin-outposts-k8s"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# Manually pinned to the third-most recent minor release (v1_34).
# CR-soon nikhil: Is this actually the correct behavior? Should we track latest instead?
k8s-openapi = { version = "0.28", features = ["v1_34", "schemars"] }
kube = { version = "4.0", features = ["runtime", "derive", "client"] }
prometheus-client = "0.25"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
